fix minor layout issues

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -8,3 +8,8 @@
     margin: 5px;
   }
 }
+
+.jumbotron {
+  padding: 10px;
+  margin-top: 30px;
+}
